# away

./: AUTHORS  BUGS  CREDITS  ChangeLog  Makefile  Makefile.am  NEWS  README  TODO  autogen.sh  away.c  away.h  away.spec  away.spec.in  clean.sh  configure.in
data/: Makefile.am  away.pam  awayrc
debian/: control
doc/: Makefile.am  away.1  awayrc.5
src/: Makefile.am  away.c  away.h  strspn.c  strstr.c  strtok.c
