dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/away.c)

dnl Generate Makefile.in
AM_INIT_AUTOMAKE(Away, 0.9.5)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Require dynamic linker (?)
AC_CHECK_LIB(dl, dlopen,
  LIBS="$LIBS -ldl",
  AC_MSG_ERROR([*** libdl missing - please install first ***])
)

dnl Require pam
AC_CHECK_LIB(pam, pam_start,
  LIBS="$LIBS -lpam",
  AC_MSG_ERROR([*** libpam missing - please install first ***])
)

dnl Require pam_misc
AC_CHECK_LIB(pam_misc, misc_conv,
  LIBS="$LIBS -lpam_misc",
  AC_MSG_ERROR([*** libpam_misc missing - please install first ***])
)

dnl Check for pthreads
AC_CHECK_LIB(pthread, pthread_create)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(paths.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(strdup strspn strstr)

AM_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile src/Makefile data/Makefile doc/Makefile)
