dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/away.c)

dnl Generate Makefile.in
AM_INIT_AUTOMAKE(away, 0.9.6)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libpam
AC_CHECK_LIB(pam, pam_start)

dnl Checks for libpam_misc
AC_CHECK_LIB(pam_misc, misc_conv)

dnl Checks for libpthread
AC_CHECK_LIB(pthread, pthread_create)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(paths.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(strdup strspn strstr strtok)

AM_CONFIG_HEADER(config.h)
AC_OUTPUT(
Makefile
src/Makefile
doc/Makefile
data/Makefile
away.spec)
